overlays/full-security/gatekeeper/gatekeeper-policies/constraints/no-serviceaccount-token.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPAutomountServiceAccountTokenPod
metadata:
  name: no-serviceaccount-token
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces:
      - falco
      - trivy-system 
      - security-scan
