overlays/full-security/gatekeeper/gatekeeper-policies/constraints/require-resources.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredResources
metadata:
  name: require-resources
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces:
      - falco
  parameters:
    limits:
      - cpu
      - memory
    requests:
      - cpu
      - memory
